--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,9 +24,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>10</y>
+      <y>40</y>
       <width>761</width>
-      <height>481</height>
+      <height>451</height>
      </rect>
     </property>
     <column>
@@ -44,6 +44,21 @@
       <string>学号</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>生日</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>761</width>
+      <height>22</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
