--- a/addstudentdialog.ui
+++ b/addstudentdialog.ui
@@ -79,6 +79,11 @@
    </property>
    <item>
     <property name="text">
+     <string> </string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
      <string>男</string>
     </property>
    </item>
