--- a/coursedialog.ui
+++ b/coursedialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>272</width>
-    <height>155</height>
+    <height>220</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>110</y>
+     <y>170</y>
      <width>271</width>
      <height>32</height>
     </rect>
@@ -32,7 +32,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="cNameLabel">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -45,7 +45,7 @@
     <string>课程名</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="IDLabel">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -83,6 +83,68 @@
    <property name="placeholderText">
     <string>输入课程代号</string>
    </property>
+  </widget>
+  <widget class="QLabel" name="creditLabel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>100</y>
+     <width>47</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>学分</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="creditBox">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>100</y>
+     <width>181</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="maximum">
+    <number>10</number>
+   </property>
+   <property name="value">
+    <number>1</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>143</y>
+     <width>47</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>课程属性</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="courseTypeBox">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>140</y>
+     <width>181</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>必修</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>选修</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
