--- a/addstudentdialog.ui
+++ b/addstudentdialog.ui
@@ -28,6 +28,9 @@
    <property name="standardButtons">
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
+   <property name="centerButtons">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="studenName">
    <property name="geometry">
@@ -79,7 +82,7 @@
    </property>
    <item>
     <property name="text">
-     <string> </string>
+     <string/>
     </property>
    </item>
    <item>
